create mount function for both products and cart

--- a/container/public/index.html
+++ b/container/public/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="dev-products"></div>
-    <div id="dev-cart"></div>
+    <div id="container-products"></div>
+    <div id="container-cart"></div>
   </body>
 </html>
