--- a/main-project/marketing/public/index.html
+++ b/main-project/marketing/public/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="local-marketing"></div>
+    <div id="_marketing-dev-root"></div>
   </body>
 </html>
